--- a/templates/Customer/index.html
+++ b/templates/Customer/index.html
@@ -3,56 +3,153 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Threads</title>
-    <link rel="stylesheet" href="../../static/css/style.css" />
+    <title>NASA Header</title>
+    <!-- Css Styles -->
+    <link rel="stylesheet" href="../../static/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="../../static/vendor/css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="../../static/css/elegant-icons.css" type="text/css" />
+    <link rel="stylesheet" href="../../static/css/nice-select.css" type="text/css" />
+    <link rel="stylesheet" href="../../static/css/jquery-ui.min.css" type="text/css" />
+    <link rel="stylesheet" href="../../static/css/owl.carousel.min.css" type="text/css" />
+    <link rel="stylesheet" href="../../static/css/slicknav.min.css" type="text/css" />
+    <link href="../../static/css/LayoutFreal/main.css" rel="stylesheet" />
+    <!-- shortcut -->
+    <link rel="shortcut icon" href="../../static/images/logo.png" />
   </head>
   <body>
-    <header>
-      <div class="container-freal">
-        <h1>Threads</h1>
-        <nav>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Explore</a></li>
-            <li><a href="#">Notifications</a></li>
-            <li><a href="#">Messages</a></li>
-            <li><a href="#">Profile</a></li>
-          </ul>
-        </nav>
+    <header class="navbar navbar-expand-lg navbar-dark">
+      <a class="navbar-brand" href="#">
+        <img src="../../static/images/logo.png" alt="NASA" style="height: 30px" />
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Explore</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">News & Events</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Multimedia</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">NASA+ <span class="badge badge-danger">LIVE</span></a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />
+        </form>
       </div>
     </header>
-    <main class="container-freal">
-      <div class="sidebar">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Explore</a></li>
-          <li><a href="#">Notifications</a></li>
-          <li><a href="#">Messages</a></li>
-          <li><a href="#">Profile</a></li>
-        </ul>
-      </div>
-      <div class="content">
-        <div class="post-box">
-          <textarea
-            id="post-content"
-            placeholder="What's on your mind?"
-          ></textarea>
-          <button id="post-button">Post</button>
+    <section class="hero-section">
+      <img src="../../static/images/background.avif" alt="" />
+    </section>
+    <footer class="footer text-white py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3 mb-4">
+            <img src="path/to/nasa-logo.png" alt="NASA" class="footer-logo mb-2" />
+            <p>The National Aeronautics and Space Administration</p>
+            <p>NASA explores the unknown in air and space, innovates for the benefit of humanity, and inspires the world through discovery.</p>
+            <a href="#" class="text-white">About NASA's Mission</a>
+            <br />
+            <a href="#" class="text-danger font-weight-bold">Join Us <span class="badge badge-danger">LIVE</span></a>
+          </div>
+          <div class="col-lg-2 mb-4">
+            <h5>Home</h5>
+            <ul class="list-unstyled">
+              <li><a href="#" class="text-white">News & Events</a></li>
+              <li><a href="#" class="text-white">Multimedia</a></li>
+              <li>
+                <a href="#" class="text-white">NASA+ <span class="badge badge-danger">LIVE</span></a>
+              </li>
+              <li><a href="#" class="text-white">Missions</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-2 mb-4">
+            <h5>Humans in Space</h5>
+            <ul class="list-unstyled">
+              <li><a href="#" class="text-white">Earth & Climate</a></li>
+              <li><a href="#" class="text-white">The Solar System</a></li>
+              <li><a href="#" class="text-white">The Universe</a></li>
+              <li><a href="#" class="text-white">Science</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-2 mb-4">
+            <h5>Aeronautics</h5>
+            <ul class="list-unstyled">
+              <li><a href="#" class="text-white">Technology</a></li>
+              <li><a href="#" class="text-white">Learning Resources</a></li>
+              <li><a href="#" class="text-white">About NASA</a></li>
+              <li><a href="#" class="text-white">NASA en Español</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-3 mb-4">
+            <h5>Follow NASA</h5>
+            <div class="footer-social mb-3">
+              <a href="#" class="text-white mr-3"><i class="fab fa-facebook-f"></i></a>
+              <a href="#" class="text-white mr-3"><i class="fab fa-instagram"></i></a>
+              <a href="#" class="text-white mr-3"><i class="fab fa-twitter"></i></a>
+              <a href="#" class="text-white mr-3"><i class="fab fa-youtube"></i></a>
+            </div>
+            <a href="#" class="text-white">More NASA Social Accounts</a>
+            <br />
+            <a href="#" class="text-white">NASA Newsletters</a>
+          </div>
         </div>
-        <div id="posts-container">
-          <!-- Posts will be appended here -->
+        <div class="row mt-4">
+          <div class="col-12">
+            <ul class="list-inline text-center">
+              <li class="list-inline-item">
+                <a href="#" class="text-white">Sitemap</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="text-white">For Media</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="text-white">Privacy Policy</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="text-white">FOIA</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="text-white">No FEAR Act</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="text-white">Office of the IG</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="text-white">Budget & Annual Reports</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="text-white">Agency Financial Reports</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="text-white">Contact NASA</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="text-white">Accessibility</a>
+              </li>
+            </ul>
+            <p class="text-center mt-2">Page Last Updated: Jun 1, 2024</p>
+            <p class="text-center">
+              Responsible NASA Official:
+              <a href="#" class="text-white">Rebecca Simmons</a>
+            </p>
+          </div>
         </div>
       </div>
-      <div class="right-sidebar">
-        <h2>Trends</h2>
-        <ul>
-          <li><a href="#">#trend1</a></li>
-          <li><a href="#">#trend2</a></li>
-          <li><a href="#">#trend3</a></li>
-          <li><a href="#">#trend4</a></li>
-        </ul>
-      </div>
-    </main>
-    <script src="../../static/js/script.js"></script>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
 </html>
