--- a/templates/Customer/otp.html
+++ b/templates/Customer/otp.html
@@ -8,13 +8,10 @@
     <link rel="stylesheet" href="../../static/css/swiper-bundle.min.css" />
 
     <!-- cloud icon -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <!-- shortcut -->
     <link rel="shortcut icon" href="../../static/images/logo.png" />
-    <link href="../../static/css/style.css" rel="stylesheet" />
+    <link href="../../static/css/LayoutLogin&Register/style.css" rel="stylesheet" />
     <title>Register</title>
   </head>
   <body>
@@ -31,10 +28,7 @@
                   <!-- Added overlay div -->
                   <div class="text-container">
                     <h3>Explore Culinary Delights</h3>
-                    <p>
-                      Embark on a gastronomic adventure, discovering the flavors
-                      and aromas of diverse cuisines around the globe.
-                    </p>
+                    <p>Embark on a gastronomic adventure, discovering the flavors and aromas of diverse cuisines around the globe.</p>
                     <ul class="text-container-location">
                       <i class="fa-solid fa-map-location-dot"></i>
                       VietNam, Ho Chi Minh City
@@ -52,11 +46,7 @@
                   <!-- Added overlay div -->
                   <div class="text-container">
                     <h3>Indulge in Local Cuisine</h3>
-                    <p>
-                      Immerse yourself in the culture of each destination
-                      through its authentic dishes, from street food gems to
-                      fine dining experiences.
-                    </p>
+                    <p>Immerse yourself in the culture of each destination through its authentic dishes, from street food gems to fine dining experiences.</p>
                     <ul class="text-container-location">
                       <i class="fa-solid fa-map-location-dot"></i>
                       VietNam, Ho Chi Minh City
@@ -74,11 +64,7 @@
                   <!-- Added overlay div -->
                   <div class="text-container">
                     <h3>Culinary Experiences</h3>
-                    <p>
-                      Delight your taste buds with cooking classes, market
-                      visits, and food tastings, curated to provide a deep dive
-                      into the local culinary scene.
-                    </p>
+                    <p>Delight your taste buds with cooking classes, market visits, and food tastings, curated to provide a deep dive into the local culinary scene.</p>
                     <ul class="text-container-location">
                       <i class="fa-solid fa-map-location-dot"></i>
                       VietNam, Ho Chi Minh City
@@ -96,11 +82,7 @@
                   <!-- Added overlay div -->
                   <div class="text-container">
                     <h3>Foodie Destinations</h3>
-                    <p>
-                      Travel to renowned food capitals and hidden culinary gems,
-                      uncovering the secrets behind each region's unique
-                      culinary identity.
-                    </p>
+                    <p>Travel to renowned food capitals and hidden culinary gems, uncovering the secrets behind each region's unique culinary identity.</p>
                     <ul class="text-container-location">
                       <i class="fa-solid fa-map-location-dot"></i>
                       VietNam, Ho Chi Minh City
@@ -118,11 +100,7 @@
                   <!-- Added overlay div -->
                   <div class="text-container">
                     <h3>Meet Local Chefs and Food Artisans</h3>
-                    <p>
-                      Connect with passionate chefs and artisans, learning about
-                      their techniques, traditions, and the stories behind their
-                      creations.
-                    </p>
+                    <p>Connect with passionate chefs and artisans, learning about their techniques, traditions, and the stories behind their creations.</p>
                     <ul class="text-container-location">
                       <i class="fa-solid fa-map-location-dot"></i>
                       VietNam, Ho Chi Minh City
@@ -140,11 +118,7 @@
                   <!-- Added overlay div -->
                   <div class="text-container">
                     <h3>Cultural Insights</h3>
-                    <p>
-                      Gain insights into the history, traditions, and customs of
-                      each destination through its food, discovering how cuisine
-                      reflects the soul of a community.
-                    </p>
+                    <p>Gain insights into the history, traditions, and customs of each destination through its food, discovering how cuisine reflects the soul of a community.</p>
                     <ul class="text-container-location">
                       <i class="fa-solid fa-map-location-dot"></i>
                       VietNam, Ho Chi Minh City
@@ -162,11 +136,7 @@
                   <!-- Added overlay div -->
                   <div class="text-container">
                     <h3>Customized Food Tours</h3>
-                    <p>
-                      Tailor your culinary journey to your preferences, whether
-                      you crave spicy street food in Bangkok or farm-to-table
-                      dining in Tuscany.
-                    </p>
+                    <p>Tailor your culinary journey to your preferences, whether you crave spicy street food in Bangkok or farm-to-table dining in Tuscany.</p>
                     <ul class="text-container-location">
                       <i class="fa-solid fa-map-location-dot"></i>
                       VietNam, Ho Chi Minh City
@@ -177,21 +147,14 @@
             </div>
             <div class="swiper-slide">
               <!-- Nội dung slide 8 -->
-              <img
-                src="../../static/images/login/login 10.avif"
-                alt="Slide 3"
-              />
+              <img src="../../static/images/login/login 10.avif" alt="Slide 3" />
               <div class="toggle">
                 <div class="toggle-panel toggle-sign-in">
                   <div class="overlay"></div>
                   <!-- Added overlay div -->
                   <div class="text-container">
                     <h3>Sustainable Dining</h3>
-                    <p>
-                      Support local communities and sustainable practices by
-                      choosing eco-friendly food tours that prioritize local
-                      ingredients and minimize environmental impact.
-                    </p>
+                    <p>Support local communities and sustainable practices by choosing eco-friendly food tours that prioritize local ingredients and minimize environmental impact.</p>
                     <ul class="text-container-location">
                       <i class="fa-solid fa-map-location-dot"></i>
                       VietNam, Ho Chi Minh City
@@ -209,11 +172,7 @@
                   <!-- Added overlay div -->
                   <div class="text-container">
                     <h3>Memorable Experiences</h3>
-                    <p>
-                      Create lasting memories as you savor unforgettable meals
-                      in picturesque settings, surrounded by the beauty and
-                      hospitality of each destination.
-                    </p>
+                    <p>Create lasting memories as you savor unforgettable meals in picturesque settings, surrounded by the beauty and hospitality of each destination.</p>
                     <ul class="text-container-location">
                       <i class="fa-solid fa-map-location-dot"></i>
                       VietNam, Ho Chi Minh City
@@ -231,11 +190,7 @@
                   <!-- Added overlay div -->
                   <div class="text-container">
                     <h3>Join a Foodie Community</h3>
-                    <p>
-                      Connect with fellow food enthusiasts, sharing
-                      recommendations, recipes, and stories from your culinary
-                      adventures around the world.
-                    </p>
+                    <p>Connect with fellow food enthusiasts, sharing recommendations, recipes, and stories from your culinary adventures around the world.</p>
                     <ul class="text-container-location">
                       <i class="fa-solid fa-map-location-dot"></i>
                       VietNam, Ho Chi Minh City
@@ -250,58 +205,25 @@
       <div class="form-container">
         <form>
           <h3>2-step Verification</h3>
-          <span
-            >We sent a verification code to your email. <br />Enter the code
-            form the email in the field below.</span
-          >
+          <span>We sent a verification code to your email. <br />Enter the code form the email in the field below.</span>
           <div class="form-group">
             <div class="form-opt-item">
-              <input
-                type="text"
-                class="form-control"
-                id="otp1"
-                maxlength="1"
-                required
-              />
+              <input type="text" class="form-control" id="otp1" maxlength="1" required />
             </div>
             <div class="form-opt-item">
-              <input
-                type="text"
-                class="form-control"
-                id="otp2"
-                maxlength="1"
-                required
-              />
+              <input type="text" class="form-control" id="otp2" maxlength="1" required />
             </div>
             <div class="form-opt-item">
-              <input
-                type="text"
-                class="form-control"
-                id="otp3"
-                maxlength="1"
-                required
-              />
+              <input type="text" class="form-control" id="otp3" maxlength="1" required />
             </div>
             <div class="form-opt-item">
-              <input
-                type="text"
-                class="form-control"
-                id="otp3"
-                maxlength="1"
-                required
-              />
+              <input type="text" class="form-control" id="otp3" maxlength="1" required />
             </div>
             <!-- Add more fields for additional digits if needed -->
           </div>
           <button type="submit">Verifi my account</button>
           <p>
-            Don't hava an account?<a href="#">
-              <span
-                class="font-weight-bold"
-                style="font-weight: bold; color: #75b8ed"
-                >Resend a new code</span
-              ></a
-            >
+            Don't hava an account?<a href="#"> <span class="font-weight-bold" style="font-weight: bold; color: #75b8ed">Resend a new code</span></a>
           </p>
         </form>
       </div>
