--- a/templates/Customer/login.html
+++ b/templates/Customer/login.html
@@ -7,19 +7,13 @@
     <link href="../../static/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../../static/css/swiper-bundle.min.css" />
     <!-- cloud icon -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <!-- Notification -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- shortcut -->
     <link rel="shortcut icon" href="../../static/images/logo.png" />
-    <link href="../../static/css/style.css" rel="stylesheet" />
+    <link href="../../static/css/LayoutLogin&Register/style.css" rel="stylesheet" />
     <title>Freal Login</title>
   </head>
   <body>
@@ -36,10 +30,7 @@
                   <!-- Added overlay div -->
                   <div class="text-container">
                     <h3>Explore Culinary Delights</h3>
-                    <p>
-                      Embark on a gastronomic adventure, discovering the flavors
-                      and aromas of diverse cuisines around the globe.
-                    </p>
+                    <p>Embark on a gastronomic adventure, discovering the flavors and aromas of diverse cuisines around the globe.</p>
                     <ul class="text-container-location">
                       <i class="fa-solid fa-map-location-dot"></i>
                       VietNam, Ho Chi Minh City
@@ -57,11 +48,7 @@
                   <!-- Added overlay div -->
                   <div class="text-container">
                     <h3>Indulge in Local Cuisine</h3>
-                    <p>
-                      Immerse yourself in the culture of each destination
-                      through its authentic dishes, from street food gems to
-                      fine dining experiences.
-                    </p>
+                    <p>Immerse yourself in the culture of each destination through its authentic dishes, from street food gems to fine dining experiences.</p>
                     <ul class="text-container-location">
                       <i class="fa-solid fa-map-location-dot"></i>
                       VietNam, Ho Chi Minh City
@@ -79,11 +66,7 @@
                   <!-- Added overlay div -->
                   <div class="text-container">
                     <h3>Culinary Experiences</h3>
-                    <p>
-                      Delight your taste buds with cooking classes, market
-                      visits, and food tastings, curated to provide a deep dive
-                      into the local culinary scene.
-                    </p>
+                    <p>Delight your taste buds with cooking classes, market visits, and food tastings, curated to provide a deep dive into the local culinary scene.</p>
                     <ul class="text-container-location">
                       <i class="fa-solid fa-map-location-dot"></i>
                       VietNam, Ho Chi Minh City
@@ -101,11 +84,7 @@
                   <!-- Added overlay div -->
                   <div class="text-container">
                     <h3>Foodie Destinations</h3>
-                    <p>
-                      Travel to renowned food capitals and hidden culinary gems,
-                      uncovering the secrets behind each region's unique
-                      culinary identity.
-                    </p>
+                    <p>Travel to renowned food capitals and hidden culinary gems, uncovering the secrets behind each region's unique culinary identity.</p>
                     <ul class="text-container-location">
                       <i class="fa-solid fa-map-location-dot"></i>
                       VietNam, Ho Chi Minh City
@@ -123,11 +102,7 @@
                   <!-- Added overlay div -->
                   <div class="text-container">
                     <h3>Meet Local Chefs and Food Artisans</h3>
-                    <p>
-                      Connect with passionate chefs and artisans, learning about
-                      their techniques, traditions, and the stories behind their
-                      creations.
-                    </p>
+                    <p>Connect with passionate chefs and artisans, learning about their techniques, traditions, and the stories behind their creations.</p>
                     <ul class="text-container-location">
                       <i class="fa-solid fa-map-location-dot"></i>
                       VietNam, Ho Chi Minh City
@@ -145,11 +120,7 @@
                   <!-- Added overlay div -->
                   <div class="text-container">
                     <h3>Cultural Insights</h3>
-                    <p>
-                      Gain insights into the history, traditions, and customs of
-                      each destination through its food, discovering how cuisine
-                      reflects the soul of a community.
-                    </p>
+                    <p>Gain insights into the history, traditions, and customs of each destination through its food, discovering how cuisine reflects the soul of a community.</p>
                     <ul class="text-container-location">
                       <i class="fa-solid fa-map-location-dot"></i>
                       VietNam, Ho Chi Minh City
@@ -167,11 +138,7 @@
                   <!-- Added overlay div -->
                   <div class="text-container">
                     <h3>Customized Food Tours</h3>
-                    <p>
-                      Tailor your culinary journey to your preferences, whether
-                      you crave spicy street food in Bangkok or farm-to-table
-                      dining in Tuscany.
-                    </p>
+                    <p>Tailor your culinary journey to your preferences, whether you crave spicy street food in Bangkok or farm-to-table dining in Tuscany.</p>
                     <ul class="text-container-location">
                       <i class="fa-solid fa-map-location-dot"></i>
                       VietNam, Ho Chi Minh City
@@ -182,21 +149,14 @@
             </div>
             <div class="swiper-slide">
               <!-- Nội dung slide 8 -->
-              <img
-                src="../../static/images/login/login 10.avif"
-                alt="Slide 3"
-              />
+              <img src="../../static/images/login/login 10.avif" alt="Slide 3" />
               <div class="toggle">
                 <div class="toggle-panel toggle-sign-in">
                   <div class="overlay"></div>
                   <!-- Added overlay div -->
                   <div class="text-container">
                     <h3>Sustainable Dining</h3>
-                    <p>
-                      Support local communities and sustainable practices by
-                      choosing eco-friendly food tours that prioritize local
-                      ingredients and minimize environmental impact.
-                    </p>
+                    <p>Support local communities and sustainable practices by choosing eco-friendly food tours that prioritize local ingredients and minimize environmental impact.</p>
                     <ul class="text-container-location">
                       <i class="fa-solid fa-map-location-dot"></i>
                       VietNam, Ho Chi Minh City
@@ -214,11 +174,7 @@
                   <!-- Added overlay div -->
                   <div class="text-container">
                     <h3>Memorable Experiences</h3>
-                    <p>
-                      Create lasting memories as you savor unforgettable meals
-                      in picturesque settings, surrounded by the beauty and
-                      hospitality of each destination.
-                    </p>
+                    <p>Create lasting memories as you savor unforgettable meals in picturesque settings, surrounded by the beauty and hospitality of each destination.</p>
                     <ul class="text-container-location">
                       <i class="fa-solid fa-map-location-dot"></i>
                       VietNam, Ho Chi Minh City
@@ -236,11 +192,7 @@
                   <!-- Added overlay div -->
                   <div class="text-container">
                     <h3>Join a Foodie Community</h3>
-                    <p>
-                      Connect with fellow food enthusiasts, sharing
-                      recommendations, recipes, and stories from your culinary
-                      adventures around the world.
-                    </p>
+                    <p>Connect with fellow food enthusiasts, sharing recommendations, recipes, and stories from your culinary adventures around the world.</p>
                     <ul class="text-container-location">
                       <i class="fa-solid fa-map-location-dot"></i>
                       VietNam, Ho Chi Minh City
@@ -257,9 +209,7 @@
           <h1>Sign In</h1>
           <span>Hello, Friend! Please enter your details.</span>
           <div class="social-icons">
-            <a href="#" class="icon"
-              ><i class="fa-brands fa-google-plus-g"></i
-            ></a>
+            <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
             <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
           </div>
           <div class="form-item">
@@ -272,27 +222,16 @@
           <input type="email" id="login-email" placeholder="Email" />
           <div class="show-item">
             <input type="password" id="login-password" placeholder="Password" />
-            <i
-              class="fa-solid fa-eye-slash password-toggle"
-              data-target="login-password"
-            ></i>
+            <i class="fa-solid fa-eye-slash password-toggle" data-target="login-password"></i>
           </div>
           <div class="row link-container">
             <a class="col-6 left-link" href="#">Remember me?</a>
-            <a class="col-6 right-link text-right" href="#"
-              >Forget Your Password?</a
-            >
+            <a class="col-6 right-link text-right" href="#">Forget Your Password?</a>
           </div>
 
           <button type="submit" id="sign-in-button">Sign In</button>
           <p>
-            Don't hava an account?<a href="register.html">
-              <span
-                class="font-weight-bold"
-                style="font-weight: bold; color: #75b8ed"
-                >SignUp</span
-              ></a
-            >
+            Don't hava an account?<a href="register.html"> <span class="font-weight-bold" style="font-weight: bold; color: #75b8ed">SignUp</span></a>
           </p>
         </form>
       </div>
