--- a/templates/Customer/index.html
+++ b/templates/Customer/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../../static/css/jquery-ui.min.css" type="text/css" />
     <link rel="stylesheet" href="../../static/css/owl.carousel.min.css" type="text/css" />
     <link rel="stylesheet" href="../../static/css/slicknav.min.css" type="text/css" />
-    <link href="../../static/css/LayoutFreal/main.css" rel="stylesheet" />
+    <link href="../../static/css/IndexFreal.main.css" rel="stylesheet" />
     <!-- shortcut -->
     <link rel="shortcut icon" href="../../static/images/logo.png" />
   </head>
