--- a/templates/Customer/otp.html
+++ b/templates/Customer/otp.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <!-- shortcut -->
     <link rel="shortcut icon" href="../../static/images/logo.png" />
-    <link href="../../static/css/LayoutLogin&Register/style.css" rel="stylesheet" />
+    <link href="../../static/css//Login&Register.main.css" rel="stylesheet" />
     <title>Register</title>
   </head>
   <body>
