--- a/templates/Customer/register.html
+++ b/templates/Customer/register.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- shortcut -->
     <link rel="shortcut icon" href="../../static/images/logo.png" />
-    <link href="../../static/css/LayoutLogin&Register/style.css" rel="stylesheet" />
+    <link href="../../static/css//Login&Register.main.css" rel="stylesheet" />
 
     <title>Freal Register</title>
   </head>
